Modify image, remove unneeded code, and fill out About page

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -31,7 +31,7 @@
 				content: '';
 				display: block;
 				position: absolute;
-				top: calc(-3.5rem - 1px);
+				top: calc(-3.5rem);
 				left: calc(50% - #{_size(border-width) * 1});
 				width: _size(border-width);
 				height: calc(3.5rem + 1px);
